grammar.js
    source_file: ($) => repeat(choice($.import_statement, $.statement)),

    comment: ($) => token(seq("//", /[^\n]*/)),

    identifier: ($) => /[A-Za-z_$][A-Za-z0-9_]*/,
    number: ($) => /[0-9][0-9_]*(\.[0-9_]+)?/,
    string: ($) =>
      seq(
        '"',
        repeat(choice($.string_content, $.escape_sequence, $.brace_escape, $.string_interpolation)),
        '"'
      ),
    string_content: ($) => token.immediate(choice(/[^"\\{}]+/, "}")),
    brace_escape: ($) => token.immediate(choice("{{", "}}")),
    expression_statement: ($) => $.expression,

    variable_declaration: ($) =>
      prec(1, seq(
        choice("let", "mut"),
        field("name", $.identifier),
        optional(seq(":", field("type", $.type))),
        "=",
        field("value", $.expression)
      )),

    function_declaration: ($) =>
      seq(
        optional(choice("private", "test")),
        "fn",
        optional("mut"),
        field("name", choice($.qualified_identifier, $.identifier, alias("mut", $.identifier))),
        optional(field("type_params", $.type_parameters)),
        field("parameters", $.parameter_list),
        optional(field("return_type", $.type)),
        field("body", $.block)
      ),

    parameter_list: ($) =>
      seq("(", optional(sep1($.parameter, ",")), ")"),

    parameter: ($) =>
      seq(optional("mut"), field("name", $.identifier), optional(seq(":", field("type", $.type)))),

    block: ($) => seq("{", repeat($.statement), "}"),

    assignment_expression: ($) =>
      choice(
        $.not_expression,
        prec.right(
          PREC.assign,
          seq($.range_expression, choice("=", "=+", "=-"), $.assignment_expression)
        ),
        $.range_expression
      ),

    // `not` is intentionally broad in Ard: it consumes a complete expression
    // rather than binding like arithmetic unary operators.
    range_expression: ($) =>
      choice(
        prec.left(PREC.range, seq($.or_expression, "..", $.or_expression)),
        $.or_expression
      ),

    or_expression: ($) =>
      choice(
        prec.left(PREC.or, seq($.and_expression, "or", $.or_expression)),
        $.and_expression
      ),

    and_expression: ($) =>
      choice(
        prec.left(PREC.and, seq($.comparison_expression, "and", $.and_expression)),
        $.comparison_expression
      ),

    comparison_expression: ($) =>
      choice(
        prec.left(
          PREC.compare,
          seq(
            $.additive_expression,
            choice("<", "<=", ">", ">=", "==", "!="),
            $.additive_expression
          )
        ),
        $.additive_expression
      ),

    additive_expression: ($) =>
      choice(
        prec.left(PREC.add, seq($.multiplicative_expression, choice("+", "-"), $.additive_expression)),
        $.multiplicative_expression
      ),

    multiplicative_expression: ($) =>
      choice(
        prec.left(PREC.multiply, seq($.unary_expression, choice("*", "/", "%"), $.multiplicative_expression)),
        $.unary_expression
      ),

    unary_expression: ($) =>
      choice(
        prec(PREC.unary, seq(choice("-", "mut"), $.unary_expression)),
        $.try_expression,
        $.postfix_expression,
        $.primary_expression
      ),

    postfix_expression: ($) =>
      choice(
        prec.left(PREC.call, seq($.primary_expression, $.postfix)),
        prec.left(PREC.call, seq($.postfix_expression, $.postfix))
      ),

    postfix: ($) =>
      choice(
        prec(PREC.call, $.argument_list),
        $.generic_suffix,
        $.dereference_operator,
        prec.right(seq(".", $.identifier, $.argument_list)),
        seq(".", $.identifier)
      ),

    dereference_operator: ($) => token(".@"),

    // Calls may use horizontal spacing before `(`, but a newline terminates the
    // expression in the compiler parser. Keeping the opener immediate prevents
    // Tree-sitter from joining two source statements into one postfix chain.
    // Alias the combined token back to `(` so highlight and bracket queries
    // capture call openers just like every other parenthesis.
    argument_list: ($) =>
      seq(
        alias(token.immediate(prec(1, /[ \t]*\(/)), "("),
        optional(sep1($.argument, ",")),
        ")"
      ),

    argument: ($) =>
      seq(
        optional("mut"),
        choice($.named_argument, $.expression),
        optional(field("spread", $.spread_operator))
      ),

    spread_operator: ($) => "...",

    primary_expression: ($) =>
      choice(
        $.number,
        $.string,
        $.raw_string,
        $.rune,
        $.boolean,
        $.void,
        $.self_expression,
        $.unsafe_block,
        $.identifier,
        $.qualified_identifier,
        $.list_literal,
        $.map_literal,
        $.struct_literal,
        $.block,
        $.parenthesized_expression,
        $.anonymous_function,
        $.match_expression,
        $.select_expression
      ),

    parenthesized_expression: ($) => prec(-1, seq("(", $.expression, ")")),

    string_interpolation: ($) =>
      seq("{", field("expression", $.expression), "}"),

    struct_literal: ($) =>
      seq(
        field("name", choice($.qualified_identifier, $.identifier)),
        field("body", $.struct_literal_body)
      ),

    struct_literal_body: ($) =>
      seq("{", repeat(seq($.struct_literal_field, optional(","))), "}"),

    struct_literal_field: ($) =>
      choice(
        seq(field("name", $.identifier), ":", field("value", $.expression)),
        field("name", $.identifier)
      ),

    qualified_identifier: ($) =>
      prec.left(seq($.identifier, repeat1(seq("::", $.identifier)))),

    nullable_type: ($) => prec.right(seq($._type_primary, optional("?"))),

    _type_primary: ($) =>
      choice(
        $.primitive_type,
        $.mutable_type,
        $.parenthesized_type,
        $.function_type,
        $.fixed_array_type,
        $.list_type,
        $.map_type,
        $.generic_type,
        $.qualified_identifier,
        $.identifier
      ),
