test/corpus/spread.txt
==================
Variadic spread arguments
==================
let reference = mut values
exec::Command("ls", reference...)
exec::Command("ls", (mut values)...)
---

(source_file
  (variable_declaration
    (identifier)
    (assignment_expression
      (range_expression
        (or_expression
          (and_expression
            (comparison_expression
              (additive_expression
                (multiplicative_expression
                  (unary_expression
                    (unary_expression
                      (primary_expression
                        (identifier))))))))))))
  (expression_statement
    (assignment_expression
      (range_expression
        (or_expression
          (and_expression
            (comparison_expression
              (additive_expression
                (multiplicative_expression
                  (unary_expression
                    (postfix_expression
                      (primary_expression
                        (qualified_identifier
                          (identifier)
                          (identifier)))
                      (postfix
                        (argument_list
                          (argument
                            (assignment_expression
                              (range_expression
                                (or_expression
                                  (and_expression
                                    (comparison_expression
                                      (additive_expression
                                        (multiplicative_expression
                                          (unary_expression
                                            (primary_expression
                                              (string
                                                (string_content))))))))))))
                          (argument
                            (assignment_expression
                              (range_expression
                                (or_expression
                                  (and_expression
                                    (comparison_expression
                                      (additive_expression
                                        (multiplicative_expression
                                          (unary_expression
                                            (primary_expression
                                              (identifier))))))))))
                            (spread_operator))))))))))))))
  (expression_statement
    (assignment_expression
      (range_expression
        (or_expression
          (and_expression
            (comparison_expression
              (additive_expression
                (multiplicative_expression
                  (unary_expression
                    (postfix_expression
                      (primary_expression
                        (qualified_identifier
                          (identifier)
                          (identifier)))
                      (postfix
                        (argument_list
                          (argument
                            (assignment_expression
                              (range_expression
                                (or_expression
                                  (and_expression
                                    (comparison_expression
                                      (additive_expression
                                        (multiplicative_expression
                                          (unary_expression
                                            (primary_expression
                                              (string
                                                (string_content))))))))))))
                          (argument
                            (assignment_expression
                              (range_expression
                                (or_expression
                                  (and_expression
                                    (comparison_expression
                                      (additive_expression
                                        (multiplicative_expression
                                          (unary_expression
                                            (primary_expression
                                              (parenthesized_expression
                                                (assignment_expression
                                                  (range_expression
                                                    (or_expression
                                                      (and_expression
                                                        (comparison_expression
                                                          (additive_expression
                                                            (multiplicative_expression
                                                              (unary_expression
                                                                (unary_expression
                                                                  (primary_expression
                                                                    (identifier)))))))))))))))))))))
                            (spread_operator)))))))))))))))
